# rsyncrypto

./: .cvsignore  COPYING  ChangeLog  INSTALL.win  Makefile.am  Makefile.in  NEWS  README  aes_crypt.cc  aes_crypt.cpp  aes_crypt.h  autoarray.h  autodir.h  autofd.h  autommap.h  blocksizes.cc  blocksizes.cpp  bootstrap  bufferfd.cpp  bufferfd.h  config.h.in  configure  configure.ac  crypt_key.cc  crypt_key.cpp  crypt_key.h  crypto.c  crypto.cc  crypto.cpp  crypto.h  file.cc  file.cpp  file.h  filelist.cpp  filelist.h  filelist_format.h  filemap.cpp  filemap.h  main.c  main.cc  (+17 more)
Setup/: Setup.vdproj
branches/2.0/: ChangeLog  configure.ac  file.h  main.cpp  rsyncrypto.h  rsyncrypto.man
branches/B_DEBIAN/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  README  autommap.h  config.h.in  configure  configure.ac  crypto.cc  crypto.h  file.cc  file.h  main.cc  rsyncrypto.dsp  rsyncrypto.h  rsyncrypto.man
branches/B_WIN32_PORT/: .cvsignore  Makefile.am  Makefile.in  aes_crypt.h  autofd.h  autopipe.h  configure.ac  crypt_key.cpp  crypto.cpp  crypto.h  file.cpp  process.cpp  process.h  random.h  redir.cpp  redir.h  rsyncrypto.dsp  rsyncrypto.dsw  rsyncrypto.h  rsyncrypto.mak
branches/IMPORT/: .cvsignore  configure.ac  crypto.c
branches/speedup/: ChangeLog  bufferfd.cpp  bufferfd.h  crypto.cpp  crypto.h  file.cpp  release.checklist
contrib/: argtable2-unicode.patch  argtable2.vcproj
debian/: .cvsignore  changelog  copyright  rules  watch
docs/: filelist.txt  rsyncrypto.html  rsyncrypto_recover.html
tags/BP_WIN32_PORT/: ChangeLog  Makefile.am  blocksizes.cpp
tags/DEBIAN_REL_0_06-1/: file.cc  rsyncrypto.man
tags/DEBIAN_REL_0_06-2/: autofd.h  file.h
tags/DEBIAN_REL_0_07-1/: blocksizes.cc  configure
tags/DEBIAN_REL_0_07-2/: autofd.h  config.h.in  configure.ac  file.cc
tags/DEBIAN_REL_0_08-1/: file.cc  rsyncrypto.h
tags/DEBIAN_REL_0_09-1/: ChangeLog  configure  crypto.cc
tags/DEBIAN_REL_0_09-2/: .cvsignore  Makefile.am  configure
tags/DEBIAN_REL_0_10-1/: autoarray.h  configure  file.cc
tags/DEBIAN_REL_0_11-1/: ChangeLog  configure.ac  file.cc
tags/DEBIAN_REL_0_12-1/: Makefile.in
tags/DEBIAN_REL_0_13-1/: ChangeLog  configure
tags/DEBIAN_REL_0_16-1/: autoarray.h  configure.ac
tags/DEBIAN_REL_0_17-1/: configure.ac
tags/DEBIAN_REL_0_17-2/: blocksizes.cpp  file.cpp  filemap.cpp  rsyncrypto.h
tags/IMPORT_INITIAL/: crypto.h
tags/MERGED_WIN32_PORT/: Makefile.in  autodir.h  config.h.in  file.cpp
tags/MPF_WIN32_PORT/: configure
tags/REL_0_01/: autommap.h  configure.ac  main.cc
tags/REL_0_01/tests/: testcrypt
tags/REL_0_02/: Makefile.am  config.h.in  crypt_key.h  rsyncrypto.h
tags/REL_0_03/: autofd.h  configure.ac
tags/REL_0_04/: ChangeLog  aes_crypt.cc  configure  configure.ac  main.cc  rsyncrypto.h
tags/REL_0_05/: .cvsignore  ChangeLog  Makefile.am
tags/REL_0_06/: configure
tags/REL_0_08/: ChangeLog  configure.ac  main.cc
tags/REL_0_09/: Makefile.in
tags/REL_0_10/: rsyncrypto.h
tags/REL_0_11/: autofd.h  configure  crypt_key.h
tags/REL_0_12/: configure.ac
tags/REL_0_13/: rsyncrypto.h
tags/REL_0_14/: ChangeLog
tags/REL_0_15/: COPYING  configure.ac  crypt_key.cpp  main.cpp
tags/REL_0_16/: autopipe.h
tags/REL_0_16_beta1/: ChangeLog  Makefile.am  configure.ac  file.h  filelist.h  filelist_format.h  filelistposix.cpp  main.cpp  rsyncrypto.h
tags/REL_0_16_beta2/: configure  file.cpp  rsyncrypto.h
tags/REL_0_17/: ChangeLog  Makefile.in  NEWS
tags/START_WIN32_PORT/: autodir.h  crypt_key.cc
tags/V0.18/: ChangeLog  Makefile.am  Makefile.in  rsyncrypto.h
tags/V0.19/: ChangeLog  configure  configure.ac  crypto.cpp  release.checklist  rsyncrypto.dsw  rsyncrypto.h
tags/V1.0/: Makefile.am  configure  rsyncrypto.h
tags/V1.00/: AUTHORS  aes_crypt.h  autofd.h  file.cpp  file.h  filemap.cpp  process.cpp  random.h  release.checklist  rsyncrypto.man
tags/V1.01/: ChangeLog  README  configure.ac  rsyncrypto.h  rsyncrypto.mak
tags/V1.02/: ChangeLog  configure  configure.ac  filemap.cpp
tags/V1.03/: ChangeLog  Makefile.am  configure  configure.ac  filemap.cpp  rsyncrypto.dsp  rsyncrypto.vcproj
tags/V1.04/: ChangeLog  Makefile.am  Makefile.in  configure  file.cpp
tags/V1.04/win32/: rsyncrypto.rc
tags/V1.05/: configure  file.cpp  rsyncrypto.h  rsyncrypto.man
tags/V1.06/: NEWS
tags/V1.07/: bootstrap  configure.ac  main.cpp  release.checklist  rsyncrypto.h
tags/V1.07-2/: crypt_key.h  release.checklist  rsyncrypto.sln
tags/V1.08/: Makefile.am  autommap.h  filemap.cpp  main.cpp  release.checklist  rsyncrypto.h  rsyncrypto.sln
tags/V1.08/win32/: autofd.h  rsyncrypto.rc
tags/V1.09/: COPYING.rtf  ChangeLog  aes_crypt.cpp  blocksizes.cpp  bufferfd.cpp  file.cpp  filemap.cpp  main.cpp  rsyncrypto.h
tags/V1.10/: crypt_key.cpp  file.cpp  process.h  recover.cpp  rsyncrypto.h  rsyncrypto.vcproj
tags/V1.11/: configure.ac  filemap.cpp  main.cpp  redir.cpp
tags/V1.12/: ChangeLog  Makefile.am  bufferfd.cpp  bufferfd.h  configure.ac  (+7 more)
tests/: README  reg1.enc  reg1.key  reg2.enc  reg3.enc  reg3.key  regtest  testcrypt  times
trunk/: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL.win  Makefile.am  Makefile.in  NEWS  README  aes_crypt.cc  aes_crypt.cpp  aes_crypt.h  autodir.h  autofd.h  autommap.h  blocksizes.cpp  bufferfd.cpp  bufferfd.h  config.h.in  configure  configure.ac  crypt_key.cc  crypt_key.h  crypto.c  crypto.cc  crypto.cpp  crypto.h  file.cc  file.cpp  file.h  filelist.cpp  filelist.h  filemap.cpp  filemap.h  main.c  main.cc  main.cpp  precomp.h  process.cpp  rcserror.h  (+11 more)
trunk/Setup/: Setup.vdproj
trunk/contrib/: argtable2.vcproj
trunk/docs/: filelist.txt  rsyncrypto.html
trunk/tests/: .cvsignore  reg1.enc  reg1.key  reg3.enc  reg4.key  reg4.rot  regtest  regtestw32  testcrypt
trunk/win32/: Setup.vdproj  autofd.h  autohandle.h  config.h  nullgzip.vcproj  process.cpp  redir.cpp  rsyncrypto.rc  types.h  win32glue.cpp
win32/: Setup.vdproj  autodir.h  autofd.cpp  autofd.h  autohandle.h  autommap.h  autopipe.h  config.h  nullgzip.dsp  process.cpp  redir.cpp  rsyncrypto.rc  stdafx.cpp  types.h  win32glue.cpp
(+124 files in other folders)
